# MatrixMultiplier

./: .gitignore  CMakeLists.txt
QtConsoleApplication1/: CMakeLists.txt  TaskRunner.cpp  TaskRunner.h  main.cpp  qt.cmake
QtConsoleApplication1/Matrix/: Matrix.cpp  Matrix.h
QtConsoleApplication1/TaskMaker/: TaskMaker.cpp  TaskMaker.h
QtConsoleApplication1/TaskMaker/Task/: Task.cpp  Task.h
